# ps-industriall-estagio-ml

./: .gitignore  README.md  pyproject.toml
notebooks/: 01_pre_processing.ipynb  02_data_visualization.ipynb  03_eda.ipynb  03_eda_null_values.ipynb  03_eda_part1.ipynb  04_eda_anomaly.ipynb  04_eda_part2.ipynb  05_eda_part3.ipynb  05_eda_top_sensors.ipynb  06_eda_part4.ipynb  06_eda_tendency_sazo.ipynb  07_feature_eng.ipynb  08_model.ipynb
